# projet-tinder-bloc2

./: README.md  pyproject.toml
data/: df_speed_dating_clean.csv
notebooks/: 01_data_exploration.ipynb  02_data_cleaning_norm.ipynb  03_full_eda.ipynb  04_data_storytelling.ipynb  04_data_visualization.ipynb  05_marketing_storytelling_eda.ipynb
outputs/data/: df_speed_dating_cleaned.csv
