[project]
name = "projet-tinder-bloc2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaleido>=1.2.0",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
